--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -180,9 +180,7 @@ pre > code { border: 0; padding-right: 0; padding-left: 0; }
 .highlighter-rouge .highlight { background: #eeeeff; }
 
 /** Wrapper */
-.wrapper { max-width: calc(1000px - (30px)); margin-right: auto; margin-left: auto; padding-right: 15px; padding-left: 15px; }
-
-@media screen and (min-width: 1200px) { .wrapper { max-width: calc(1000px - (30px * 2)); padding-right: 30px; padding-left: 30px; } }
+.wrapper { max-width: 1000px; margin: 0 auto; padding: 0 30px; }
 
 /** Clearfix */
 .wrapper:after { content: ""; display: table; clear: both; }
