--- a/_sass/minima/dark-mode.scss
+++ b/_sass/minima/dark-mode.scss
@@ -90,3 +90,11 @@ canvas {
 li .post-meta-description {
     color: $med-emph !important;
 }
+
+.site-header {
+    background-color: black !important;
+}
+
+h1, h2, h3, h4, h5, h6 {
+    color: white !important;
+}
