--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -476,6 +476,10 @@ canvas { filter: invert(100%); }
 
 li .post-meta-description { color: rgba(255, 255, 255, 0.69) !important; }
 
+.site-header { background-color: black !important; }
+
+h1, h2, h3, h4, h5, h6 { color: white !important; }
+
 .language-python + .language-plaintext { border-left: 1px solid grey; margin-left: 1rem !important; }
 
 [class^="language-"]:not(.language-plaintext) pre, [class^="language-"]:not(.language-plaintext) code { background-color: #323443 !important; color: #f8f8f2; }
