--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -147,7 +147,7 @@ ul, ol { margin-left: 30px; }
 li > ul, li > ol { margin-bottom: 0; }
 
 /** Headings */
-h1, h2, h3, h4, h5, h6 { color: #111111; font-weight: 400; }
+h1, h2, h3, h4, h5, h6 { color: #111111; font-weight: 500; }
 
 /** Links */
 a { color: #2a7ae2; text-decoration: none; }
@@ -196,7 +196,7 @@ pre > code { border: 0; padding-right: 0; padding-left: 0; }
 .svg-icon { width: 1.25em; height: 1.25em; display: inline-block; fill: currentColor; vertical-align: text-bottom; overflow: visible; }
 
 /** Tables */
-table { margin-bottom: 30px; width: 100%; text-align: left; color: #6f6f6f; border-collapse: collapse; border: 1px solid #e7e7e7; }
+table { margin-bottom: 30px; width: 100%; text-align: left; color: #3f3f3f; border-collapse: collapse; border: 1px solid #e7e7e7; }
 
 table tr:nth-child(even) { background-color: #f6f6f6; }
 
@@ -288,7 +288,7 @@ table td { border: 1px solid #e7e7e7; }
 
 .post-meta .post-authors { margin-top: 3px; }
 
-.post-title, .post-content h1 { margin-bottom: 10px; font-size: 2.625rem; letter-spacing: -1px; line-height: 1.15; }
+.post-title, .post-content h1 { margin-bottom: 10px; font-size: 2.625rem; font-weight: 400; letter-spacing: -1px; line-height: 1.15; }
 
 @media screen and (min-width: 1200px) { .post-title, .post-content h1 { font-size: 2.625rem; } }
 
